--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "multi-semantic-release",
+	"name": "@dikamilo/multi-semantic-release",
 	"author": "Dave Houlbrooke <dave@shax.com>",
 	"version": "0.0.0-semantically-released",
 	"license": "0BSD",
@@ -82,9 +82,6 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/dhoulb/multi-semantic-release.git"
-	},
-	"bugs": {
-		"url": "https://github.com/dhoulb/multi-semantic-release/issues"
+		"url": "https://github.com/dikamilo/multi-semantic-release.git"
 	}
 }
